--- a/index.html
+++ b/index.html
@@ -1,90 +1,157 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV Javier Ruz</title>
-    <link rel="stylesheet" href="assets/styles/styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="assets/imgs/favicon.ico" type="image/x-icon">
+  <title>CV Javier Ruz</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="assets/styles/styles.css" />
 </head>
 <body>
-
-<!-- NAVBAR -->
-<nav class="navbar">
-    <h2 class="logo">Javier Ruz</h2>
-    <ul class="nav-links">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="portafolio.html">Portafolio</a></li>
-        <li><a href="#contacto">Contacto</a></li>
-    </ul>
-</nav>
-
-<!-- HEADER -->
-<header class="header">
-    <img src="assets/imgs/Profile Picture.jpg" alt="Foto de perfil" class="profile-pic">
-    <h1>Javier Ruz Ruz</h1>
-    <h3>Analista de Tesorería & Desarrollador Web en Formación</h3>
-
-    <p class="intro">
-        Profesional con 6 años de experiencia en análisis financiero, flujo de caja, 
-        gestión bancaria y control interno. Actualmente ampliando mis competencias 
-        hacia el desarrollo web Full Stack.
-    </p>
-
-    <a href="https://www.linkedin.com/in/javier-ruz-022880164/" class="btn" target="_blank">
-        Mi LinkedIn
-    </a>
-</header>
-
-<!-- INFORMACIÓN PERSONAL -->
-<section class="section">
-    <h2>Información Personal</h2>
-
-    <ul class="list">
-        <li><strong>Nombre:</strong> Javier Alexander Ruz Ruz</li>
-        <li><strong>Fecha de Nacimiento:</strong> 13/03/2001</li>
-        <li><strong>Dirección:</strong> Juan Luis Sanfuentes 8543</li>
-        <li><strong>Comuna:</strong> San Ramón</li>
-    </ul>
-</section>
-
-<!-- EDUCACIÓN -->
-<section class="section alt">
-    <h2>Educación</h2>
-
-    <ul class="list">
-        <li>Técnico Nivel Medio Asistente Contable</li>
-        <li>Bootcamp Full Stack – En Curso</li>
-    </ul>
-</section>
-
-<!-- EXPERIENCIA -->
-<section class="section">
-    <h2>Experiencia</h2>
-
-    <p>
-        Actualmente desempeño labores de Tesorería en Serviex S.A., donde he desarrollado habilidades 
-        en control financiero, conciliaciones, análisis de datos, cuentas bancarias y reportes ejecutivos.
-    </p>
-</section>
-
-<!-- HABILIDADES -->
-<section class="section alt">
-    <h2>Habilidades</h2>
-
-    <ul class="list">
-        <li>Gestión de inversiones (FFMM y DAP)</li>
-        <li>Control de flujo de caja</li>
-        <li>Conocimientos contables intermedios</li>
-        <li>Manejo de Microsoft Office</li>
-        <li>ERP Contables</li>
-        <li>HTML / CSS / Git</li>
-    </ul>
-</section>
-
-<!-- FOOTER -->
-<footer class="footer" id="contacto">
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="index.html">Javier Ruz</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portafolio.html">Portafolio</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- SECCION PRINCIPAL -->
+  <header class="hero d-flex align-items-center">
+    <div class="container">
+      <div class="row align-items-center g-4">
+        <div class="col-md-5 text-center">
+          <img
+            src="assets/imgs/Profile Picture.jpg"
+            alt="Foto de Javier Ruz"
+            class="hero-img"/>
+        </div>
+        <div class="col-md-7">
+          <h1 class="hero-title">Javier Ruz</h1>    
+          <h3 class="hero-subtitle">
+            Analista de Tesorería &amp; Desarrollador Web en formación
+          </h3>
+          <p class="hero-text">
+            Poseo más de 6 años de experiencia en análisis financiero, flujo
+            de caja, gestión bancaria y control interno. Actualmente ampliando
+            mis competencias hacia el desarrollo web Full Stack.
+          </p>
+          <a
+            href="https://www.linkedin.com/in/javier-ruz-022880164/"
+            target="_blank"
+            class="btn btn-primary btn-lg"
+            >Ver LinkedIn</a>
+        </div>
+      </div>
+    </div>
+  </header>
+  <main>
+    <!-- INFO PERSONAL -->
+    <section class="section">
+      <div class="container">
+        <h2 class="section-title">Información personal</h2>
+        <div class="row">
+          <div class="col-lg-6">
+            <ul class="list-unstyled section-list">
+              <li><strong>Nombre:</strong> Javier Ruz</li>
+              <li><strong>Fecha de nacimiento:</strong> 13/03/2001</li>
+              <li><strong>Dirección:</strong> Juan Luis Sanfuentes 8543</li>
+              <li><strong>Comuna:</strong> San Ramón</li>
+            </ul>
+          </div>
+          <div class="col-lg-6">
+            <p>
+              Me caracterizo por ser una persona responsable, orientada al
+              detalle y con una fuerte motivación por aprender nuevas
+              tecnologías. Disfruto automatizar procesos, organizar información
+              y entregar soluciones claras y ordenadas.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- EDUCACIÓN -->
+    <section class="section section-alt">
+      <div class="container">
+        <h2 class="section-title">Educación</h2>
+        <div class="row g-4">
+          <div class="col-md-6">
+            <div class="info-card">
+              <h4>Técnico Nivel Medio Asistente Contable</h4>
+              <p>
+                Formación en fundamentos contables, registro de información
+                financiera, conciliaciones y apoyo a procesos administrativos.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="info-card">
+              <h4>Bootcamp Desarrollador Web Full Stack</h4>
+              <p>
+                En curso. Trabajo práctico con HTML, CSS, Flexbox, Git y
+                Bootstrap, desarrollando landing pages, portafolios y proyectos
+                responsivos para la web.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- EXPERIENCIA -->
+    <section class="section">
+      <div class="container">
+        <h2 class="section-title">Experiencia</h2>
+        <div class="info-card">
+          <h4>Analista de Tesorería – Serviex S.A.</h4>
+          <p>
+            Responsable de la gestión diaria de cuentas bancarias, control de
+            flujo de caja, análisis de movimientos, elaboración de reportes y
+            coordinación con distintas áreas para asegurar el correcto uso de
+            recursos financieros.
+          </p>
+          <p>
+            Paralelamente, he desarrollado herramientas y flujos de trabajo más
+            eficientes, integrando automatizaciones y organización digital de la
+            información.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- HABILIDADES -->
+    <section class="section section-alt">
+      <div class="container">
+        <h2 class="section-title">Habilidades</h2>
+        <div class="skills-grid">
+          <div class="skill-pill">Gestión de inversiones (FFMM, DAP)</div>
+          <div class="skill-pill">Control de flujo de caja</div>
+          <div class="skill-pill">Conocimientos contables</div>
+          <div class="skill-pill">Microsoft Excel &amp; Office</div>
+          <div class="skill-pill">Manejo de ERP contables</div>
+          <div class="skill-pill">HTML &amp; CSS Básico</div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <!-- FOOTER -->
+  <footer class="footer">
     <p>© 2025 Javier Ruz — Todos los derechos reservados.</p>
-</footer>
-
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
