--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="assets/imgs/favicon.ico" type="image/x-icon">
   <title>CV Javier Ruz</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="assets/styles/styles.css" />
 </head>
 <body>
@@ -27,6 +27,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="portafolio.html">Portafolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contacto">Contacto</a>
           </li>
         </ul>
       </div>
@@ -52,11 +55,6 @@
             de caja, gestión bancaria y control interno. Actualmente ampliando
             mis competencias hacia el desarrollo web Full Stack.
           </p>
-          <a
-            href="https://www.linkedin.com/in/javier-ruz-022880164/"
-            target="_blank"
-            class="btn btn-primary btn-lg"
-            >Ver LinkedIn</a>
         </div>
       </div>
     </div>
@@ -65,7 +63,7 @@
     <!-- INFO PERSONAL -->
     <section class="section">
       <div class="container">
-        <h2 class="section-title">Información personal</h2>
+        <h2 class="section-title">Información Personal</h2>
         <div class="row">
           <div class="col-lg-6">
             <ul class="list-unstyled section-list">
@@ -77,8 +75,8 @@
           </div>
           <div class="col-lg-6">
             <p>
-              Me caracterizo por ser una persona responsable, orientada al
-              detalle y con una fuerte motivación por aprender nuevas
+              Me caracterizo por ser una persona responsable, enfocado en los
+              detalles y con una fuerte motivación por aprender nuevas
               tecnologías. Disfruto automatizar procesos, organizar información
               y entregar soluciones claras y ordenadas.
             </p>
@@ -120,13 +118,12 @@
           <p>
             Responsable de la gestión diaria de cuentas bancarias, control de
             flujo de caja, análisis de movimientos, elaboración de reportes y
-            coordinación con distintas áreas para asegurar el correcto uso de
+            coordinación con distintas áreas para asegurar el correcto uso de los
             recursos financieros.
           </p>
           <p>
-            Paralelamente, he desarrollado herramientas y flujos de trabajo más
-            eficientes, integrando automatizaciones y organización digital de la
-            información.
+            Paralelamente, he desarrollado herramientas, flujos de trabajo más
+            eficientes e integración de automatizaciones.
           </p>
         </div>
       </div>
@@ -142,15 +139,40 @@
           <div class="skill-pill">Microsoft Excel &amp; Office</div>
           <div class="skill-pill">Manejo de ERP contables</div>
           <div class="skill-pill">HTML &amp; CSS Básico</div>
+          <div class="skill-pill">GitHub</div>
         </div>
       </div>
     </section>
-  </main>
+</main>
   <!-- FOOTER -->
-  <footer class="footer">
-    <p>© 2025 Javier Ruz — Todos los derechos reservados.</p>
+  <footer class="footer" id="contacto">
+    <div class="container">
+        <h5 class="text-white mb-3">Contacto</h5>
+        <!-- EMAIL -->
+        <p class="mb-2">
+            <i class="fa-solid fa-envelope"></i>
+            <a href="mailto:javierruzrz@gmail.com" class="footer-link">
+                javierruzruz@gmail.com
+            </a>
+        </p>
+        <!-- REDES SOCIALES -->
+        <div class="social-links">
+            <a href="https://www.linkedin.com/in/javier-ruz-022880164/" 
+               target="_blank" class="footer-icon">
+               <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/JavierVsc"
+               target="_blank" class="footer-icon">
+               <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="https://instagram.com/"
+               target="_blank" class="footer-icon">
+               <i class="fa-brands fa-instagram"></i>
+            </a>
+        </div>
+        <p class="text-white mt-3 small">© 2025 Javier Ruz — Todos los derechos reservados.</p>
+    </div>
   </footer>
-  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
