Mejora semántica: reemplaza lista por dl en Información Personal

--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
         <h2 class="section-title">Información Personal</h2>
         <div class="row">
           <div class="col-lg-6">
-            <ul class="list-unstyled section-list">
-              <li><strong>Nombre:</strong> Javier Ruz</li>
-              <li><strong>Fecha de nacimiento:</strong> 13/03/2001</li>
-              <li><strong>Dirección:</strong> Juan Luis Sanfuentes 8543</li>
-              <li><strong>Comuna:</strong> San Ramón</li>
-            </ul>
+            <dl class="row">
+              <dt class="col-5">Nombre</dt><dd class="col-7">Javier Ruz</dd>
+              <dt class="col-5">Fecha de nacimiento</dt><dd class="col-7">13/03/2001</dd>
+              <dt class="col-5">Dirección</dt><dd class="col-7">Juan Luis Sanfuentes 8543</dd>
+              <dt class="col-5">Comuna</dt><dd class="col-7">San Ramón</dd>
+          </dl>
           </div>
           <div class="col-lg-6">
             <p>
